--- a/loanntb/equation_apps/equation.css
+++ b/loanntb/equation_apps/equation.css
@@ -45,3 +45,16 @@ button:hover {
     color: red;
     margin-top: 30px; 
 }
+a {
+    text-decoration: none;
+    font-weight: bold;
+}
+#a1 {
+    color: #000080;
+}
+#a2 {
+    color: #004d00;
+}
+a:hover {
+    background-color: yellow;
+}
